trying to fix background image on iPhone

--- a/main.css
+++ b/main.css
@@ -129,7 +129,8 @@ header {
     margin: 0 auto;
     padding: 200px 20px;
     /* unfixed background image for very small screens */
-    background: url(Images/Night-Lights-East.png); 
+    /* added no-repeat center center - see if this works for mobile */
+    background: url(Images/Night-Lights-East.png) no-repeat center center; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -231,7 +232,8 @@ section:nth-child(even) {
     width: 100%;
     margin: 0 auto;
     padding: 245px 20px;
-    background: url(Images/Night-Lights-West.PNG); 
+    /* added no-repeat center center - see if this works for mobile */
+    background: url(Images/Night-Lights-West.PNG) no-repeat center center; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
